--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
     "crypto": "^1.0.1",
+    "crypto-js": "^4.2.0",
     "jquery": "^3.7.1",
     "ngx-cookie-service": "^16.1.0",
     "rxjs": "~7.8.0",
@@ -31,6 +32,7 @@
     "@angular-devkit/build-angular": "^16.1.3",
     "@angular/cli": "~16.1.3",
     "@angular/compiler-cli": "^16.1.0",
+    "@types/crypto-js": "^4.2.1",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
