--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
     "jquery": "^3.7.1",
+    "jwt-decode": "^4.0.0",
     "ngx-cookie-service": "^16.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
