--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@ng-select/ng-select": "^12.0.4",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
     "crypto": "^1.0.1",
