--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@igniteui/material-icons-extended": "^3.0.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
+    "fflate": "^0.7.3",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
+    "minireset.css": "~0.0.4",
     "ngx-cookie-service": "^16.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -34,6 +38,7 @@
     "@angular/cli": "~16.1.3",
     "@angular/compiler-cli": "^16.1.0",
     "@types/crypto-js": "^4.2.1",
+    "@types/hammerjs": "^2.0.40",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
