--- a/angular.json
+++ b/angular.json
@@ -26,16 +26,13 @@
               "src/assets/"
             ],
             "styles": [
-              "node_modules/minireset.css/minireset.css",
               "node_modules/bootstrap/dist/css/bootstrap.css",
-              "src/styles.css",
-              "node_modules/igniteui-angular/styles/igniteui-angular.css"
+              "src/styles.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.js",
               "node_modules/@popperjs/core/dist/umd/popper.js",
-              "node_modules/bootstrap/dist/js/bootstrap.js",
-              "./node_modules/hammerjs/hammer.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.js"
             ],
             "stylePreprocessorOptions": {
               "includePaths": [
@@ -101,11 +98,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "node_modules/igniteui-angular/styles/igniteui-angular.css"
+              "src/styles.css"
             ],
             "scripts": [
-              "./node_modules/hammerjs/hammer.min.js"
             ],
             "stylePreprocessorOptions": {
               "includePaths": [
